--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Стартовый шаблон</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=IBM+Plex+Serif:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     @@include('blocks/header.html')
-    @@include('blocks/footer.html')
+    @@include('blocks/main.html')
     <script src="./js/index.bundle.js"></script>
   </body>
 </html>
