feat: functionality for calculating balance and transaction amounts

--- a/src/html/blocks/main.html
+++ b/src/html/blocks/main.html
@@ -5,6 +5,7 @@
         @@include('balance.html') @@include('transactions.html')
         @@include('total.html')
         @@include('operation.html')
+        @@include('timer.html')
       </div>
     </div>
   </div>
