feat: implementation login and transfers

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    @@include('blocks/header.html')
-    @@include('blocks/main.html')
+    <div class="wrapper">
+      @@include('blocks/header.html') @@include('blocks/main.html')
+    </div>
     <script src="./js/index.bundle.js"></script>
   </body>
 </html>
